src/test/ui/fully-qualified-type/fully-qualified-type-name1.stderr
error[E0308]: mismatched types
  --> $DIR/fully-qualified-type-name1.rs:5:9
   |
LL |     x = 5;
   |         ^
   |         |
   |         expected enum `std::option::Option`, found integer
   |         help: try using a variant of the expected type: `Some(5)`
   |
   = note: expected type `std::option::Option<usize>`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
